--- a/CSS/_Facility.scss
+++ b/CSS/_Facility.scss
@@ -31,7 +31,7 @@
             display: flex;
             flex-wrap: wrap;
             .img-teams {
-                width: 100%;
+                width:33.33%;
                 position: relative;
                 .bacimg-04 {
                     background-image: url("../img/設施/鞦韆_工作區域\ 1.png");
@@ -41,7 +41,7 @@
                 }
                 .overlay {
                     position: absolute;
-                    z-index: 0;
+                    z-index: 10;
                     bottom: 0;
                     left: 0;
                     right: 0;
@@ -67,7 +67,7 @@
                 width: 100%;
             }
             .img-team {
-                width: 33.33%;
+                width: 100%;
                 display: flex;
                 flex-wrap: wrap;
                 justify-items: flex-end;
@@ -96,11 +96,18 @@
                     border-radius: 50%;
                     overflow: hidden;
                 }
-                .imgg {
+                .imggg{
+                    width: 100%;
+                    height: 100%;
+                    .imgg {
                     width: 100%;
                     height: 100%;
                     border-radius: 50%;
+                    background-image: url('../img/設施/煙囪滑梯.jpg');
+                    background-position: center;
                 }
+                }
+                
                 .img01 {
                     background-image: url("/團體專題/3.程式/img/設施/天空上的鞦韆.jpg");
                 }
