--- a/CSS/_Information.scss
+++ b/CSS/_Information.scss
@@ -1,90 +1,111 @@
 @mixin Information() {
     .park_pag {
-        background-image: url("../img/主頁背景/入園資訊\ 背景_工作區域\ 1.png");
         display: flex;
         flex-wrap: wrap;
-        // 按鈕
-        .park_button_bar {
-            height: calc(100vh - 30px);
-            width: 20%;
+    }
 
-            display: flex;
-            .park_button_g {
-                height: 50%;
-                width: 50%;
-                margin: auto;
-                display: flex;
-                flex-wrap: wrap;
-                text-align: center;
-                .park_tittle {
-                    height: 20%;
-                    width: 100%;
-                    color: #673a1b;
-                    font-size: 46px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-                .park_lease_box {
-                    height: 20%;
-                    width: 100%;
+    .park_button_bar {
+        height: calc(100vh - 30px);
+        width: 20%;
+        background-color: antiquewhite;
+        display: flex;
+    }
 
-                    font-size: 32px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                }
-                .park_show {
-                    height: 20%;
-                    width: 100%;
-                    font-size: 32px;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    color: black;
-                }
-            }
-        }
-        // 按鈕
+    .park_photo_R {
+        height: calc(100vh - 30px);
+        width: 80%;
+        background-color: rgb(233, 95, 40);
+        display: flex;
+        align-items: center;
+    }
 
-        // 內文
-        .park_photo_R {
-            height: calc(100vh - 30px);
-            width: 80%;
+    .park_button_g {
+        height: 50%;
+        width: 50%;
+        background-color: rgb(40, 53, 233);
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+    }
 
-            display: flex;
-            align-items: center;
-            .park_photobox {
-                height: 100%;
-                width: 100%;
-                .park_inf {
-                    height: 100%;
-                    width: 100%;
+    .park_tittle {
+        height: 20%;
+        width: 100%;
+        background-color: rgb(79, 233, 40);
+        font-size: 36px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-                    display: none;
-                    .park_inf_photo {
-                        height: 100%;
-                        width: 100%;
+    .park_lease_box {
+        height: 20%;
+        width: 100%;
+        background-color: rgb(233, 40, 159);
+        font-size: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                    }
-                }
-            }
-        }
-        // 內文
-        /* --------開關顯示---- */
+    .park_show {
+        height: 20%;
+        width: 100%;
+        background-color: rgb(233, 40, 159);
+        font-size: 32px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: black;
+    }
 
-        .park_active {
-            display: block;
-        }
+    .park_photobox {
+        height: 100%;
+        width: 100%;
+        background-color: rgb(140, 40, 233);
 
-        .park_lease_box.park_active {
-            background-color: rgb(214, 30, 30);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+    }
+
+    .park_inf {
+        height: 100%;
+        width: 100%;
+        background-color: cornflowerblue;
+        display: none;
+    }
+
+    .park_inf_photo {
+        height: 100%;
+        width: 100%;
+        /* background-color: darksalmon; */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    footer {
+        width: 100%;
+        height: 30px;
+        background-color: #B15821;
+        margin: auto;
+        color: #F7F8F8;
+        font-size: 16px;
+        text-align: center;
+        line-height: 30px;
+    }
+
+    /* --------開關顯示---- */
+
+    .park_active {
+        display: block;
+    }
+
+    .park_lease_box.park_active {
+        background-color: rgb(214, 30, 30);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
     }
 }
