--- a/CSS/_apple-about.scss
+++ b/CSS/_apple-about.scss
@@ -4,7 +4,7 @@
     }
     #apple_effect {
         width: 100%;
-        height: 1650vh;
+        height: 1280vh;
         background-color: #ebe3d4;
         position: relative;
         .parallax_window {
@@ -56,17 +56,7 @@
                 }
 
                 ///各區背景圖///
-                .footer {
-                    width: 100%;
-                    position: sticky;
-                    bottom: 0;
-                    background-color: rgba(177, 88, 33, 0.1);
-                    height: 42px;
-                    color: #595757;
-                    text-align: center;
-                    line-height: 42px;
-                    z-index: 10;
-                }
+
                 .About {
                     padding: 50px;
                     width: 90%;
@@ -487,90 +477,153 @@
                     }
                 }
                 // 極限體驗
-                // 特色餐飲
-                .sec-09 {
-                    display: flex;
-                    flex-wrap: wrap;
-                    justify-content: center;
-                    .sec-09-context {
-                        width: 80%;
-                        .img-group-09 {
-                            display: flex;
-                            flex-wrap: wrap;
-                            // Hover效果失靈
-                            .img-09 {
-                                width: 25%;
-                                position: relative;
-                                .img-09-01 {
-                                    display: block;
-                                    width: 100%;
-                                    height: 50%;
-                                }
-                                .overlay {
-                                    position: absolute;
-                                    bottom: 0;
-                                    left: 0;
-                                    right: 0;
-                                    background-color: #bc6821;
-                                    overflow: hidden;
-                                    width: 0;
-                                    height: 100%;
-                                    transition: 0.5s ease;
-                                    .img-09-text {
-                                        color: white;
-                                        font-size: 20px;
-                                        position: absolute;
-                                        top: 50%;
-                                        left: 50%;
-                                        -webkit-transform: translate(-50%, -50%);
-                                        -ms-transform: translate(-50%, -50%);
-                                        transform: translate(-50%, -50%);
-                                        white-space: nowrap;
-                                    }
-                                }
-                                &:hover .overlay {
-                                    width: 100%;
-                                }
-                            }
-                            // Hover效果失靈
-                            .img-09-team {
-                                width: 50%;
-                                display: flex;
-                                flex-wrap: wrap;
-                                .img-09-01 {
-                                    width: 100%;
-                                    opacity: 0.5;
-                                    transition: 0.5s;
-                                    &:hover {
-                                        height: 50%;
-                                        opacity: 1;
-                                    }
-                                }
-                            }
+            }
+        }
+    }
+    // 特色餐飲
+    .sec-09 {
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        .title-09 {
+            margin-top: 100px;
+            width: 50%;
+            height: 10%;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            .fas.fa-circle {
+                color: #595757;
+                font-size: 14px;
+                line-height: 100px;
+            }
+            .sec-09-line {
+                width: 50%;
+                height: 50px;
+                line-height: 50px;
+                border-bottom: 1px solid #b15821;
+                .sec-09-title {
+                    width: 100%;
+                    font-size: 40px;
+                    text-align: center;
+                    color: #673a1b;
+                }
+            }
+        }
+        .sec-09-context {
+            width: 80%;
+            .img-group-09 {
+                display: flex;
+                flex-wrap: wrap;
+                // Hover效果失靈
+                .img-09 {
+                    width: 25%;
+                    position: relative;
+                    .img-09-01 {
+                        display: block;
+                        width: 100%;
+                        height: 50%;
+                    }
+                    .overlay {
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        right: 0;
+                        background-color: #bc6821;
+                        overflow: hidden;
+                        width: 0;
+                        height: 100%;
+                        transition: 0.5s ease;
+                        .img-09-text {
+                            color: white;
+                            font-size: 20px;
+                            position: absolute;
+                            top: 50%;
+                            left: 50%;
+                            -webkit-transform: translate(-50%, -50%);
+                            -ms-transform: translate(-50%, -50%);
+                            transform: translate(-50%, -50%);
+                            white-space: nowrap;
                         }
                     }
+                    &:hover .overlay {
+                        width: 100%;
+                    }
                 }
-                // 特色餐飲
-                .sec-10 {
-                    width: 100%;
-                    height: 100%;
+                // Hover效果失靈
+                .img-09-team {
+                    width: 50%;
                     display: flex;
-                    justify-content: center;
                     flex-wrap: wrap;
-                    .sec-10-container {
-                        width: 80%;
-                        height: 90%;
-                        padding-bottom: 50px;
-                        display: flex;
-                        justify-content: center;
-                        flex-wrap: wrap;
-                        .sec10-img {
-                            width: 33.33%;
+                    .img-09-01 {
+                        width: 100%;
+                        opacity: 0.5;
+                        transition: 0.5s;
+                        &:hover {
                             height: 50%;
+                            opacity: 1;
                         }
                     }
                 }
             }
         }
+    }
+    // 特色餐飲
+    .sec-10 {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        .title-10 {
+            margin-top: 100px;
+            width: 50%;
+            height: 10%;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            .fas.fa-circle {
+                color: #595757;
+                font-size: 14px;
+                line-height: 100px;
+            }
+            .sec-10-line {
+                width: 50%;
+                height: 50px;
+                line-height: 50px;
+                border-bottom: 1px solid #b15821;
+                .sec-10-title {
+                    width: 100%;
+                    font-size: 40px;
+                    text-align: center;
+                    color: #673a1b;
+                }
+            }
+        }
+        .sec-10-container {
+            width: 80%;
+            height: 90%;
+            padding-bottom: 50px;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            .sec10-img {
+                width: 33.33%;
+                height: 50%;
+            }
+        }
+    }
+    .footer {
+        width: 100%;
+        position: sticky;
+        bottom: 0;
+        background-color: rgba(177, 88, 33, 0.1);
+        height: 42px;
+        color: #595757;
+        text-align: center;
+        line-height: 42px;
+        z-index: 10;
     }
 }
