--- a/CSS/_hamberger.scss
+++ b/CSS/_hamberger.scss
@@ -175,7 +175,7 @@
         }
     }
     .btn-groupxxx {
-        position: relative;
+        position: fixed;
         width: 100%;
         height: 100vh;
         background-color: #efe5cb;
