--- a/CSS/_apple-about.scss
+++ b/CSS/_apple-about.scss
@@ -2,9 +2,12 @@
     ::-webkit-scrollbar {
         display: none;
     }
+    .About-bac {
+        background-color: #ebe3d4;
+    }
     #apple_effect {
         width: 100%;
-        height: 1280vh;
+        height: 1300vh;
         background-color: #ebe3d4;
         position: relative;
         .parallax_window {
@@ -487,8 +490,10 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+
         .title-09 {
-            margin-top: 100px;
+            margin-top: 250px;
+            margin-bottom: 60px;
             width: 50%;
             height: 10%;
             display: flex;
@@ -517,42 +522,137 @@
             .img-group-09 {
                 display: flex;
                 flex-wrap: wrap;
-                // Hover效果失靈
+
                 .img-09 {
                     width: 25%;
+                    height: 50%;
                     position: relative;
                     .img-09-01 {
                         display: block;
                         width: 100%;
-                        height: 50%;
+                        height: 100%;
                     }
-                    .overlay {
+                    /*to right */
+                    .overlay-ToRight {
                         position: absolute;
                         bottom: 0;
                         left: 0;
                         right: 0;
                         background-color: #bc6821;
+                        opacity: 0.8;
                         overflow: hidden;
                         width: 0;
                         height: 100%;
                         transition: 0.5s ease;
-                        .img-09-text {
-                            color: white;
-                            font-size: 20px;
-                            position: absolute;
-                            top: 50%;
-                            left: 50%;
-                            -webkit-transform: translate(-50%, -50%);
-                            -ms-transform: translate(-50%, -50%);
-                            transform: translate(-50%, -50%);
-                            white-space: nowrap;
-                        }
                     }
-                    &:hover .overlay {
+                    &:hover .overlay-ToRight {
                         width: 100%;
                     }
+                    .img-09-text-right {
+                        color: white;
+                        font-size: 20px;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        -webkit-transform: translate(-50%, -50%);
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                        white-space: nowrap;
+                    }
+                    /*to right */
+                    /* to down */
+                    .overlay-ToDown {
+                        position: absolute;
+                        bottom: 100%;
+                        left: 0;
+                        right: 0;
+                        background-color: #bc6821;
+                        opacity: 0.8;
+                        overflow: hidden;
+                        width: 100%;
+                        height: 0;
+                        transition: 0.5s ease;
+                    }
+
+                    &:hover .overlay-ToDown {
+                        bottom: 0;
+                        height: 100%;
+                    }
+
+                    .img-09-text-down {
+                        color: white;
+                        font-size: 20px;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        -webkit-transform: translate(-50%, -50%);
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                        text-align: center;
+                    }
+                    /* to down */
+                    /* to left */
+                    .overlay-ToLeft {
+                        position: absolute;
+                        bottom: 0;
+                        left: 100%;
+                        right: 0;
+                        background-color: #bc6821;
+                        opacity: 0.8;
+                        overflow: hidden;
+                        width: 0;
+                        height: 100%;
+                        transition: 0.5s ease;
+                    }
+
+                    &:hover .overlay-ToLeft {
+                        width: 100%;
+                        left: 0;
+                    }
+
+                    .img-09-text-left {
+                        color: white;
+                        font-size: 20px;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        -webkit-transform: translate(-50%, -50%);
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                        white-space: nowrap;
+                    }
+                    /* to right */
+                    /* to top */
+                    .overlay-ToTop {
+                        position: absolute;
+                        bottom: 0;
+                        left: 0;
+                        right: 0;
+                        background-color: #bc6821;
+                        opacity: 0.8;
+                        overflow: hidden;
+                        width: 100%;
+                        height: 0;
+                        transition: 0.5s ease;
+                    }
+
+                    &:hover .overlay-ToTop {
+                        height: 100%;
+                    }
+
+                    .img-09-text-top {
+                        color: white;
+                        font-size: 20px;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        -webkit-transform: translate(-50%, -50%);
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                        text-align: center;
+                    }
+                    /* to top */
                 }
-                // Hover效果失靈
                 .img-09-team {
                     width: 50%;
                     display: flex;
@@ -577,8 +677,12 @@
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
+
+        margin-top: 250px;
+        margin-bottom: 50px;
+        position: relative;
         .title-10 {
-            margin-top: 100px;
+            margin-top: 250px;
             width: 50%;
             height: 10%;
             display: flex;
@@ -604,26 +708,156 @@
         }
         .sec-10-container {
             width: 80%;
-            height: 90%;
+            height: 100%;
             padding-bottom: 50px;
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            .sec10-img {
+
+            .sec-10-img-group {
                 width: 33.33%;
                 height: 50%;
+                position: relative;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+                .sec10-img {
+                    display: block;
+                    width: 100%;
+                    height: 100%;
+                }
+                /*to right */
+                .overlay-ToRight {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    background-color: #6A3906;
+                    opacity: 0.8;
+                    overflow: hidden;
+                    width: 0;
+                    height: 100%;
+                    transition: 0.5s ease;
+                }
+                &:hover .overlay-ToRight {
+                    width: 100%;
+                }
+                .img-10-text-right {
+                    color: white;
+                    font-size: 20px;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                    white-space: nowrap;
+                }
+                /*to right */
+                /* to down */
+                .overlay-ToDown {
+                    position: absolute;
+                    bottom: 100%;
+                    left: 0;
+                    right: 0;
+                    background-color: #6A3906;
+                    opacity: 0.8;
+                    overflow: hidden;
+                    width: 100%;
+                    height: 0;
+                    transition: 0.5s ease;
+                }
+
+                &:hover .overlay-ToDown {
+                    bottom: 0;
+                    height: 100%;
+                }
+
+                .img-10-text-down {
+                    color: white;
+                    font-size: 20px;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                    text-align: center;
+                }
+                /* to down */
+                /* to left */
+                .overlay-ToLeft {
+                    position: absolute;
+                    bottom: 0;
+                    left: 100%;
+                    right: 0;
+                    background-color: #6A3906;
+                    opacity: 0.8;
+                    overflow: hidden;
+                    width: 0;
+                    height: 100%;
+                    transition: 0.5s ease;
+                }
+
+                &:hover .overlay-ToLeft {
+                    width: 100%;
+                    left: 0;
+                }
+
+                .img-10-text-left {
+                    color: white;
+                    font-size: 20px;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    -webkit-transform: translate(-50%, -50%);
+                    -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
+                    white-space: nowrap;
+                }
+                /* to right */
+                /* to top */
+                .overlay-ToTop {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    background-color: #6A3906;
+                    opacity: 0.8;
+                    overflow: hidden;
+                    width: 100%;
+                    height: 0;
+                    transition: 0.5s ease;
+                    .img-10-text-top {
+                        color: white;
+                        font-size: 20px;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        -webkit-transform: translate(-50%, -50%);
+                        -ms-transform: translate(-50%, -50%);
+                        transform: translate(-50%, -50%);
+                        text-align: center;
+                    }
+                }
+
+                &:hover .overlay-ToTop {
+                    height: 100%;
+                }
+
+                /* to top */
             }
         }
-    }
-    .footer {
-        width: 100%;
-        position: sticky;
-        bottom: 0;
-        background-color: rgba(177, 88, 33, 0.1);
-        height: 42px;
-        color: #595757;
-        text-align: center;
-        line-height: 42px;
-        z-index: 10;
+        .footer {
+            width: 100%;
+            position: absolute;
+            bottom: 0;
+            background-color: rgba(177, 88, 33, 0.1);
+            height: 42px;
+            color: #595757;
+            text-align: center;
+            line-height: 42px;
+            z-index: 10;
+        }
     }
 }
